--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ p {
 }
 
 section {
+  margin: -1px 0 0;
   position: relative;
   opacity: 1;
   pointer-events: all;
@@ -519,19 +520,6 @@ section {
   transform: translateZ(-17.5px);
   position: relative;
   z-index: 2;
-}
-
-.projects__arrow {
-  position: absolute;
-  bottom: 5px;
-}
-
-.projects__item:nth-child(1n) .projects__arrow {
-  right: 5px;
-}
-
-.projects__item:nth-child(2n) .projects__arrow {
-  left: 5px;
 }
 
 .btn__arrow:hover, .active .btn__arrow {
@@ -3096,6 +3084,15 @@ html.has-scroll-dragging {
 
 /* start projects */
 
+/* .projects__block {
+  transform: translateY(30vh);
+  transition: transform 0.5s linear;
+}
+
+.xyz .projects__block {
+  transform: translateY(0);
+} */
+
 .projects__container {
   max-width: 1440px;
   z-index: 1;
@@ -3246,6 +3243,19 @@ html.has-scroll-dragging {
 
 .projects__arrow .btn__side_hover svg {
   color: var(--bg);
+}
+
+.projects__arrow {
+  position: absolute;
+  bottom: 5px;
+}
+
+.projects__item:nth-child(1n) .projects__arrow {
+  right: 5px;
+}
+
+.projects__item:nth-child(2n) .projects__arrow {
+  left: 5px;
 }
 
 /* end projects */
