--- a/css/style.css
+++ b/css/style.css
@@ -1377,6 +1377,7 @@ html.has-scroll-dragging {
 
 .header__form_policy,
 .header__form_policy a {
+  display: inline-block;
   max-width: 150px;
   font-size: 9px;
   font-weight: 400;
