--- a/css/style.css
+++ b/css/style.css
@@ -1397,7 +1397,7 @@ html.has-scroll-dragging {
   padding: 14px 10px 10px 0;
   font-size: 16px;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 16px;
   border: none;
   color: var(--text);
   background: transparent;
@@ -1464,8 +1464,13 @@ html.has-scroll-dragging {
   transition-delay: 0.3s;
 }
 
-.form__control.error .header__forms_form_border::before,
-.form__control.error .header__forms_form_border::after {
+.header__forms_form_control.success .header__forms_form_border::before,
+.header__forms_form_control.success .header__forms_form_border::after {
+  background-color: var(--green);
+}
+
+.header__forms_form_control.error .header__forms_form_border::before,
+.header__forms_form_control.error .header__forms_form_border::after {
   background-color: var(--error);
 }
 
