--- a/css/style.css
+++ b/css/style.css
@@ -1423,6 +1423,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 1px;
   flex: 0 0 auto;
   position: relative;
   bottom: 0;
