--- a/css/style.css
+++ b/css/style.css
@@ -1494,8 +1494,8 @@ html.has-scroll-dragging {
   margin: 0 0 5px;
   font-size: 16px;
   font-weight: 400;
-  line-height: 19px;
-  color: var(--gray-border);
+  line-height: 16px;
+  color: var(--text-gray);
 }
 
 .header__forms_form_border {
