--- a/css/style.css
+++ b/css/style.css
@@ -2744,7 +2744,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 700px;
+  height: 70vh;
   align-items: center;
 }
 
