--- a/css/style.css
+++ b/css/style.css
@@ -126,55 +126,55 @@ h6 {
 
 h1 {
   font-family: var(--title-font);
-  font-size: 78px;
+  font-size: 61px;
   font-weight: 700;
-  line-height: 98px;
+  line-height: 77px;
   color: var(--text);
 }
 
 h2 {
   font-family: var(--title-font);
-  font-size: 54px;
+  font-size: 49px;
   font-weight: 700;
-  line-height: 68px;
+  line-height: 61px;
   color: var(--text);
 }
 
 h3 {
   font-family: var(--title-font);
-  font-size: 36px;
+  font-size: 39px;
   font-weight: 700;
-  line-height: 45px;
+  line-height: 49px;
   color: var(--text);
 }
 
 h4 {
   font-family: var(--title-font);
-  font-size: 20px;
+  font-size: 31px;
   font-weight: 700;
-  line-height: 25px;
+  line-height: 39px;
   color: var(--text);
 }
 
 h5 {
   font-family: var(--title-font);
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
-  line-height: 25px;
+  line-height: 31px;
   color: var(--text);
 }
 
 h6 {
-  font-family: var(--text-font);
+  font-family: var(--title-font);
   font-size: 20px;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 25px;
   color: var(--text);
 }
 
 a,
 p {
-  font-family: var(--text-font);
+  font-family: var(--title-font);
   font-size: 16px;
   font-weight: 300;
   line-height: 19px;
@@ -1859,16 +1859,17 @@ html.has-scroll-dragging {
 }
 
 .showreel__container {
-  max-width: 1440px;
+  max-width: 100%;
   padding: 0;
+  margin: -1px 0 0;
   overflow: hidden;
 }
 
 .showreel__inview {
   height: var(--height);
   max-height: 800px;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
 }
 
 .showreel__button,
@@ -3350,7 +3351,7 @@ html.has-scroll-dragging {
 }
 
 .articles__block {
-  padding: 20px 0 60px;
+  padding: 60px 0;
 }
 
 .articles__slider {
@@ -3370,6 +3371,7 @@ html.has-scroll-dragging {
 
 .articles__item {
   width: calc(25% - 30px);
+  height: auto;
   border: 1px solid var(--border);
 }
 
@@ -3416,13 +3418,21 @@ html.has-scroll-dragging {
   height: calc(100% - 200px);
   padding: 60px 40px 40px;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 10px;
+}
+
+.articles__head {
+  display: -webkit-box;
+  height: 60px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .articles__desc {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   overflow: hidden;
   font-family: var(--title-font);
   font-size: 12px;
