--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,8 @@ section {
 } */
 
 .cursor {
-  width: 15px;
-  height: 15px;
+  width: 1px;
+  height: 1px;
   position: fixed;
   top: var(--y);
   left: var(--x);
@@ -246,14 +246,14 @@ section {
   content: "";
   top: 50%;
   left: 50%;
-  width: 100%;
-  height: 100%;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
   background-color: var(--bg);
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  -webkit-transition: background-color 0.1s linear;
-  transition: background-color 0.1s linear;
+  -webkit-transition: width 0.1s linear, height 0.1s linear, background-color 0.1s linear;
+  transition: width 0.1s linear, height 0.1s linear, background-color 0.1s linear;
 }
 
 .dark .cursor::before {
@@ -268,17 +268,22 @@ section {
   background-color: var(--orange);
 }
 
-.cursor.active,
-.cursor.active.hover {
+.active.cursor::before,
+.hover.active.cursor::before {
   width: 50px;
   height: 50px;
-  -webkit-transition: width 1s linear, height 1s linear;
-  transition: width 1s linear, height 1s linear;
+  -webkit-transition: width 1s linear, height 1s linear, background-color 0.1s linear;
+  transition: width 1s linear, height 1s linear, background-color 0.1s linear;
 }
 
-.cursor.hover {
+.hover.cursor::before {
   width: 30px;
   height: 30px;
+}
+
+.leave.cursor::before {
+  width: 0px;
+  height: 0px;
 }
 
 .main__section {
