--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 100%;
+  min-height: var(--height);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
