--- a/css/style.css
+++ b/css/style.css
@@ -1698,9 +1698,10 @@ html.has-scroll-dragging {
 /* start footer */
 
 .footer {
-  margin: -1px 0 0;
+  margin: 80px 0 0;
   flex: 0 0 auto;
   background-color: var(--bg);
+  border-top: 1px solid var(--border);
 }
 
 .footer__container {
@@ -1832,7 +1833,7 @@ html.has-scroll-dragging {
 
 .showreel__inview {
   height: var(--height);
-  max-height: 800px;
+  max-height: 650px;
   position: relative;
   overflow: hidden;
 }
@@ -2686,7 +2687,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   height: 70vh;
-  max-height: 780px;
+  max-height: 620px;
   align-items: center;
 }
 
@@ -2729,7 +2730,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  padding: 120px 80px 180px;
+  padding: 160px 80px 200px;
   flex-direction: column;
   gap: 30px;
 }
@@ -2740,7 +2741,7 @@ html.has-scroll-dragging {
 
 .digital__head {
   width: 50%;
-  height: 160px;
+  height: 135px;
   position: relative;
   z-index: 1;
 }
@@ -2768,7 +2769,7 @@ html.has-scroll-dragging {
   width: 100%;
   height: 60px;
   max-width: 405px;
-  padding-left: 50px;
+  padding-left: 60px;
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
   -webkit-transition: -webkit-transform 0.3s linear, opacity 0.3s linear;
@@ -2820,7 +2821,7 @@ html.has-scroll-dragging {
   padding: 80px;
   position: absolute;
   left: 50%;
-  bottom: 100px;
+  bottom: 160px;
   border-top: 1px solid var(--border);
   border-bottom: 1px solid var(--border);
   background-color: var(--bg);
@@ -2839,7 +2840,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 60px;
+  gap: 80px;
   position: relative;
   right: 0;
 }
@@ -3303,7 +3304,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   height: calc(100% - 280px);
-  padding: 40px;
+  padding: 50px 40px 40px;
   flex-direction: column;
   gap: 10px;
 }
@@ -3333,7 +3334,7 @@ html.has-scroll-dragging {
   margin-top: 0;
   align-items: center;
   justify-content: center;
-  top: 210px;
+  top: 290px;
   bottom: auto;
   color: var(--bg);
   border: none;
@@ -3455,8 +3456,6 @@ html.has-scroll-dragging {
   transform: translateY(0);
 }
 
-/* end breadcrumbs */
-
 .breadcrumbs__tag_list {
   display: flex;
   flex-wrap: wrap;
@@ -3476,9 +3475,11 @@ html.has-scroll-dragging {
   clip-path: polygon(100% 0, 100% calc(100% - 11px), calc(100% - 8px) 100%, 0 100%, 0 0);
 }
 
+/* end breadcrumbs */
+
+/* start 1440px */
 @media (max-width: 1919px) {
-  h1,
-  h5 {
+  h1 {
     font-size: 61px;
     line-height: 62px;
   }
@@ -3494,6 +3495,10 @@ html.has-scroll-dragging {
     font-size: 20px;
     line-height: 25px;
   }
+  h5 {
+    font-size: 49px;
+    line-height: 61px;
+  }
   a,
   p,
   li,
@@ -3506,6 +3511,12 @@ html.has-scroll-dragging {
   .btn__input {
     font-size: 12px;
     line-height: 14px;
+  }
+  .main__border {
+    max-width: 1210px;
+    width: calc(100% - 120px);
+    left: 60px;
+    right: 60px;
   }
   .icon__tg {
     width: 16.75px;
@@ -3523,11 +3534,82 @@ html.has-scroll-dragging {
     width: 20px;
     height: 13.2px;
   }
+  .container {
+    max-width: 1320px;
+  }
+  .projects__container,
+  .articles__container,
+  .footer__container {
+    max-width: 1440px;
+  }
+  .showreel,
+  .expertise,
+  .projects__block,
+  .articles__block,
+  .footer__block {
+    padding: 60px 0;
+  }
+  .showreel__container {
+    max-width: 100%;
+  }
+  .showreel__inview {
+    max-height: 500px;
+  }
+  .projects__image {
+    height: 360px;
+  }
+  .projects__link {
+    gap: 10px;
+  }
+  .projects__item:nth-child(1n) {
+    padding: 0 30px 0 0;
+  }
+  .projects__item:nth-child(2n) {
+    padding: 0 0 0 30px;
+  }
+  .digital__container {
+    max-height: 520px;
+  }
+  .digital__head {
+    height: 110px;
+  }
+  .digital__info {
+    padding: 120px 60px 140px;
+  }
+  .accredited__flex {
+    padding: 40px 30px;
+    bottom: 100px;
+  }
+  .accredited__list {
+    gap: 60px;
+  }
+  .accredited__item {
+    gap: 20px;
+  }
+  .articles__top {
+    padding: 0 0 40px;
+  }
+  .articles__image {
+    height: 200px;
+  }
+  .articles__info {
+    height: calc(100% - 200px);
+    padding: 50px 30px 30px;
+    gap: 10px;
+  }
+  .articles__prev,
+  .articles__next {
+    top: 210px;
+  }
+  .footer {
+    margin: 60px 0 0;
+  }
 }
+/* end 1440px */
 
+/* start 1024px */
 @media (max-width: 1439px) {
-  h1,
-  h5 {
+  h1 {
     font-size: 61px;
     line-height: 62px;
   }
@@ -3543,6 +3625,10 @@ html.has-scroll-dragging {
     font-size: 20px;
     line-height: 25px;
   }
+  h5 {
+    font-size: 49px;
+    line-height: 61px;
+  }
   a,
   p,
   li,
@@ -3556,11 +3642,148 @@ html.has-scroll-dragging {
     font-size: 10px;
     line-height: 13px;
   }
+  .header__links {
+    display: none;
+  }
+  .main__border {
+    max-width: 964px;
+    width: calc(100% - 60px);
+    left: 30px;
+    right: 30px;
+  }
+  .main__border::after {
+    border-left: none;
+  }
+  .container {
+    max-width: 1024px;
+    padding: 0 30px;
+  }
+  .showreel__container {
+    max-width: 100%;
+    padding: 0;
+  }
+  .projects__container,
+  .articles__container,
+  .footer__container {
+    max-width: 1024px;
+  }
+  .projects__container,
+  .articles__container {
+    padding: 0 10px;
+  }
+  .digital__container {
+    height: 100%;
+    max-height: 100%;
+  }
+  .digital__info {
+    padding: 60px 30px;
+    gap: 30px;
+  }
+  .digital_social_list {
+    display: none;
+  }
+  .digital__head {
+    width: 100%;
+  }
+  .digital__desc {
+    padding-left: 40px;
+  }
+  .showreel__inview {
+    max-height: 450px;
+  }
+  .accredited__flex {
+    max-width: 100%;
+    padding: 0;
+    position: relative;
+    left: auto;
+    right: 0;
+    bottom: 0;
+    background-color: transparent;
+  }
+  .accredited__list {
+    max-width: 1024px;
+    padding: 60px;
+    margin: 0 auto;
+    justify-content: flex-end;
+    gap: 60px;
+  }
+  .accredited__flex {
+    border-bottom: none;
+  }
+  .accredited__item {
+    gap: 20px;
+  }
+  .expertise {
+    padding: 30px 0 0;
+  }
+  .expertise__block {
+    flex-direction: column-reverse;
+  }
+  .expertise__left,
+  .expertise__right {
+    width: 100%;
+    padding: 30px;
+  }
+  .expertise__border {
+    display: none;
+  }
+  .articles__block,
+  .footer__block {
+    padding: 30px 0;
+  }
+  .articles__top {
+    padding: 0 30px 30px;
+  }
+  .showreel {
+    padding: 0;
+  }
+  .projects__flex {
+    padding: 0 50px 30px;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .projects__image {
+    height: 320px;
+  }
+  .projects__link {
+    gap: 10px;
+  }
+  .projects__item:nth-child(1n) {
+    padding: 0 30px 0 0;
+  }
+  .projects__item:nth-child(2n) {
+    padding: 0 0 0 30px;
+  }
+  .articles__image {
+    height: 160px;
+  }
+  .articles__info {
+    height: calc(100% - 200px);
+    padding: 50px 30px 30px;
+    gap: 10px;
+  }
+  .articles__prev,
+  .articles__next {
+    top: 210px;
+  }
+  .articles__prev,
+  .articles__next {
+    display: none;
+  }
+  .articles__info {
+    height: calc(100% - 80px);
+    padding: 20px;
+    gap: 0;
+  }
+  .footer {
+    margin: 30px 0 0;
+  }
 }
+/* end 1024px */
 
+/* start 580px */
 @media (max-width: 1023px) {
-  h1,
-  h5 {
+  h1 {
     font-size: 61px;
     line-height: 62px;
   }
@@ -3576,6 +3799,10 @@ html.has-scroll-dragging {
     font-size: 16px;
     line-height: 20px;
   }
+  h5 {
+    font-size: 29px;
+    line-height: 36px;
+  }
   a,
   p,
   li,
@@ -3589,11 +3816,73 @@ html.has-scroll-dragging {
     font-size: 10px;
     line-height: 13px;
   }
+  .header__buttons {
+    display: none;
+  }
+  .header__burger {
+    left: auto;
+    right: 22px;
+    -webkit-transform: translate(0%, -50%);
+    transform: translate(0%, -50%);
+  }
+  .main__border {
+    max-width: 540px;
+    width: calc(100% - 40px);
+    left: 20px;
+    right: 20px;
+  }
+  .container {
+    max-width: 580px;
+    padding: 0 20px;
+  }
+  .showreel__container {
+    max-width: 100%;
+    padding: 0;
+  }
+  .projects__list {
+    flex-direction: column;
+  }
+  .projects__image {
+    height: 240px;
+  }
+  .projects__item {
+    width: 100%;
+  }
+  .projects__item:nth-child(1n) {
+    padding: 0;
+  }
+  .projects__item:nth-child(2n) {
+    padding: 0;
+  }
+  .articles__item {
+    width: 235px;
+  }
+  .showreel__inview {
+    max-height: 350px;
+  }
+  .accredited__flex {
+    border-top: none;
+  }
+  .accredited__list {
+    max-width: 580px;
+    padding: 20px 40px 40px;
+    margin: 0 auto;
+    justify-content: flex-start;
+    gap: 40px;
+  }
+  .digital__desc {
+    padding-left: 20px;
+  }
+  .digital__info {
+    padding: 40px 20px;
+    gap: 20px;
+  }
 }
+/* end 580px */
 
+/* start 390px */
 @media (max-width: 390px) {
-  h1,
-  h5 {
+  h1 {
     font-size: 61px;
     line-height: 62px;
   }
@@ -3609,6 +3898,10 @@ html.has-scroll-dragging {
     font-size: 16px;
     line-height: 20px;
   }
+  h5 {
+    font-size: 29px;
+    line-height: 36px;
+  }
   a,
   p,
   li,
@@ -3623,3 +3916,4 @@ html.has-scroll-dragging {
     line-height: 13px;
   }
 }
+/* end 390px */
