--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ strong {
 
 a {
   font-family: var(--title-font);
-  font-weight: 300;
+  font-weight: 400;
 }
 
 p,
@@ -421,7 +421,7 @@ section {
   width: 100%;
   height: 100%;
   padding: 14.5px 26.5px;
-  color: var(--text);
+  color: var(--text-gray);
   background: transparent;
   border: none;
   cursor: none;
@@ -470,6 +470,7 @@ section {
 
 .button__text {
   font-family: var(--title-font);
+  color: var(--text-gray);
   position: relative;
   margin: auto;
   z-index: 1;
@@ -965,8 +966,10 @@ html.has-scroll-dragging {
   width: 124px;
 }
 
-.header__link {
-  text-transform: uppercase;
+.header__link,
+.header__link:hover {
+  text-transform: lowercase;
+  color: var(--text-gray);
 }
 
 .icon__tg {
@@ -1149,7 +1152,7 @@ html.has-scroll-dragging {
   padding: 0 50px;
   margin: 0 0 0 auto;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
   position: relative;
 }
 
@@ -1163,6 +1166,10 @@ html.has-scroll-dragging {
 
 .header__nav_contact_item p {
   margin-bottom: 20px;
+}
+
+.header__nav_link {
+  text-transform: uppercase;
 }
 
 .header__set_block {
@@ -1786,10 +1793,17 @@ html.has-scroll-dragging {
   gap: 66px;
 }
 
+.footer__link,
+.footer__copyright,
+.footer__privacy,
 .footer__link:hover,
 .footer__copyright:hover,
 .footer__privacy:hover {
   color: var(--text-gray);
+}
+
+.footer__link {
+  text-transform: uppercase;
 }
 
 .footer__bottom p {
@@ -2687,7 +2701,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   height: 70vh;
-  max-height: 620px;
+  max-height: 700px;
   align-items: center;
 }
 
@@ -3537,6 +3551,7 @@ html.has-scroll-dragging {
   .container {
     max-width: 1320px;
   }
+  .header__container,
   .projects__container,
   .articles__container,
   .footer__container {
@@ -3568,7 +3583,7 @@ html.has-scroll-dragging {
     padding: 0 0 0 30px;
   }
   .digital__container {
-    max-height: 520px;
+    max-height: 560px;
   }
   .digital__head {
     height: 110px;
@@ -3662,6 +3677,7 @@ html.has-scroll-dragging {
     max-width: 100%;
     padding: 0;
   }
+  .header__container,
   .projects__container,
   .articles__container,
   .footer__container {
@@ -3881,7 +3897,7 @@ html.has-scroll-dragging {
 /* end 580px */
 
 /* start 390px */
-@media (max-width: 390px) {
+@media (max-width: 579px) {
   h1 {
     font-size: 61px;
     line-height: 62px;
